# monitor-switch-ddc

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PROJECT.md  README.md  SECURITY.md  progress.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.tasks/refactoring-monitortray-vol1/: plan.md
scripts/: build-macos-app.sh
src/: config.rs  lib.rs  main.rs  platform.rs
src/platform/: macos_m1ddc.rs  windows_dxva2.rs
src/tray/: commands.rs  common.rs  menu.rs  mod.rs  model.rs  startup.rs
src/tray/platform/: macos.rs  windows.rs
