[package]
name = "monitorctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Devices_Display",
  "Win32_System_LibraryLoader",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
codegen-units = 1
