[package]
name = "monitorctl"
version = "0.1.0"
edition = "2021"
description = "DDC/CI monitor input switcher (CLI + tray) for macOS and Windows"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/timurkhakhalev/monitor-switch-ddc"

[features]
# Some upstream macros still reference `cfg(feature = "cargo-clippy")`. Defining
# it here avoids noisy `unexpected_cfgs` warnings on newer Rust toolchains.
cargo-clippy = []

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.148"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"
libc = "0.2.178"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Devices_Display",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
codegen-units = 1
